# hcana_online

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.gitlabci/: setup.sh
cmake/: hcanaConfig.cmake.in  os.cmake
containers/docker/: Dockerfile  Makefile  config.env
containers/singularity/: Singularity
src/: .THcScintPlaneCluster.cxx.swp  .THcScintPlaneCluster.h.swp  CMakeLists.txt  OnlineMonitor.cxx  OnlineMonitor.h  PRadETChannel.cxx  PRadETChannel.h  PRadETStation.cxx  PRadException.cxx  PRadException.h  Scandalizer.cxx  Scandalizer.h  THcCoinTime.cxx  THcCoinTime.h  THcDC.cxx  THcDC.h  THcHallCSpectrometer.cxx  THcHallCSpectrometer.h  THcHelicity.cxx  THcHelicity.h  THcHodoscope.cxx  THcHodoscope.h  THcParmList.cxx  THcRawAdcHit.cxx  THcScintillatorPlane.cxx  THcScintillatorPlane.h  THcTrigDet.cxx
src/include/: HallC_LinkDef.h
tests/: README.md  elastic_coin_replay.cxx  elastic_test.cxx  elastic_test.sh  elastic_test2.sh  my_root_script.cxx  replay_elastic_data.sh
tools/: CMakeLists.txt  et_feeder.cpp  et_producer.cpp
